# esp-evse

./: .gitignore  CLAUDE.md  README.md  ev1.yaml  ev2.yaml  openevse-tft.yaml  pyproject.toml  secrets.yaml.example
.github/workflows/: bump-firmware-version.yml
components/openevse/: __init__.py  evse_display.cpp  evse_display.h  font_big.h  font_medium.h  font_small.h  openevse.cpp  openevse.h
docs/: rapi_doc.txt
scripts/: bump_firmware_version.py  calibration.py  ttf2vlw.py
